--- a/app/src/main/res/layout/dlg_osd.xml
+++ b/app/src/main/res/layout/dlg_osd.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250sp"
+    android:layout_width="350sp"
     android:layout_height="100sp"
     android:orientation="horizontal"
     android:background="@drawable/round_yellow">
@@ -27,30 +27,50 @@
         android:orientation="vertical"
         android:layout_width="0sp"
         android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_weight="3">
         <View
             android:layout_width="match_parent"
             android:layout_height="0sp"
             android:layout_weight="0.3"/>
         <LinearLayout
-            android:id="@+id/ly_click"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
             android:focusableInTouchMode="false"
             android:clickable="false"
             android:focusable="false"
-            android:layout_width="match_parent"
-            android:layout_height="0sp"
-            android:background="@drawable/roundwhite"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_weight="1">
+            <LinearLayout
+                android:id="@+id/ly_click"
+                android:focusableInTouchMode="false"
+                android:clickable="false"
+                android:focusable="false"
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@drawable/roundwhite"
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+                <TextView
+                    android:id="@+id/txt_current"
+                    android:textColor="@color/black"
+                    android:textSize="35sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="300"/>
+            </LinearLayout>
             <TextView
-                android:id="@+id/txt_current"
-                android:textColor="@color/black"
-                android:textSize="50sp"
+                android:layout_marginLeft="5sp"
+                android:layout_marginBottom="5sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3"/>
+                android:text="ms"
+                android:layout_gravity="bottom"
+                android:textSize="30sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0sp"
