--- a/app/src/main/res/layout-sw600dp/activity_preview_ijk_channel.xml
+++ b/app/src/main/res/layout-sw600dp/activity_preview_ijk_channel.xml
@@ -513,7 +513,7 @@
                         android:paddingLeft="10sp"
                         android:background="@drawable/yellow_bg"
                         android:layout_width="0sp"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.4"
                         android:layout_height="match_parent">
                         <TextView
                             android:textSize="25sp"
@@ -529,7 +529,7 @@
                         android:layout_marginLeft="10sp"
                         android:background="@drawable/title_bg"
                         android:layout_width="0sp"
-                        android:layout_weight="0.4"
+                        android:layout_weight="0.35"
                         android:layout_height="match_parent">
                         <TextView
                             android:id="@+id/txt_next_dec"
@@ -546,11 +546,34 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="horizontal">
-
+                        <LinearLayout
+                            android:layout_marginLeft="10sp"
+                            android:id="@+id/ly_rec"
+                            android:layout_alignParentRight="true"
+                            android:layout_width="36sp"
+                            android:layout_height="36sp"
+                            android:layout_gravity="center">
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/rec_white" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_marginLeft="10sp"
+                            android:id="@+id/ly_audio_delay"
+                            android:layout_toLeftOf="@+id/ly_rec"
+                            android:layout_width="36sp"
+                            android:layout_height="36sp"
+                            android:layout_gravity="center">
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/audio_delay" />
+                        </LinearLayout>
                         <LinearLayout
                             android:layout_marginLeft="10sp"
                             android:id="@+id/ly_resolution"
-                            android:layout_alignParentRight="true"
+                            android:layout_toLeftOf="@+id/ly_audio_delay"
                             android:layout_width="36sp"
                             android:layout_height="36sp"
                             android:layout_gravity="center">
