--- a/app/src/main/res/layout-sw600dp/dlg_settting.xml
+++ b/app/src/main/res/layout-sw600dp/dlg_settting.xml
@@ -29,7 +29,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp">
-        <ListView
+        <GridView
+            android:numColumns="2"
+            android:verticalSpacing="3sp"
+            android:horizontalSpacing="5sp"
             android:id="@+id/setting_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
