--- a/app/src/main/res/layout/dlg_time_format.xml
+++ b/app/src/main/res/layout/dlg_time_format.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:button="@drawable/style_checkbox"/>
             <TextView
+                android:id="@+id/txt_first_line"
                 android:layout_marginLeft="10sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -61,6 +62,7 @@
                 android:layout_height="wrap_content"
                 android:button="@drawable/style_checkbox"/>
             <TextView
+                android:id="@+id/txt_second_line"
                 android:layout_marginLeft="10sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
